# any-xterm

./: README.md
.github/workflows/: rust.yml
server/: Cargo.toml
server/src/: main.rs
web/: bun.lockb  package.json  test.html
web/src/: App.vue
web/src/components/: SystemMonitor.vue
